TO an example value, and a closure that admits to being one
TO's first argument is spelled "the datatype or example value" and MAKE
says the same, so `to "" #{6162}` is `to string!`: the example is read
for its type and thrown away. JEBOL took a datatype and nothing else,
which is what stopped Rebol's own quoted-printable codec -- it ends on
`to data output`, where DATA is whatever the caller passed in, and
handing back the kind of thing it was given is the point of the form.

The rest follows from reading which branches TO and MAKE share. In the C
they are one label pair for errors, functions, closures and structs, and
JEBOL had two bodies that answered differently -- `to error! [...]`
refused where MAKE of the same block built the error. Now there is one
body. Objects and modules are the exception: each has a TO of its own
that takes exactly one thing, an error and a pair of objects, and is
bad-make-arg for everything else.

Two things fell out on the way. A closure reported its datatype as
function!, so `closure? :c` was false for every closure ever written
while MOLD said `make closure!` -- the molder read the flag and nothing
else did. And any-function! held three of the seven rows types.reb gives
the function typeclass; a real 3.22.5 lists all seven, and the JEBOL
test that said otherwise was asserting the defect.

A port and a module also molded as `make object!`, because the molder
wrote a fixed word where Mold_Object writes the value's own type.